# ChangeLog for media-libs/libquicktime
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.169 2011/04/25 20:55:53 aballier Exp $

  25 Apr 2011; Alexis Ballier <aballier@gentoo.org> libquicktime-1.2.2.ebuild,
  +files/libquicktime-1.2.2-ffmpeg07.patch:
  fix build with ffmpeg/libav trunk

  10 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libquicktime-1.2.2.ebuild:
  Move to virtual/ffmpeg. Fixes bug #362075.

  29 Mar 2011; Alexis Ballier <aballier@gentoo.org> -libquicktime-1.1.5.ebuild:
  remove old

  23 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  libquicktime-1.2.2.ebuild:
  ppc64 stable wrt #355449

  23 Mar 2011; Tim Harder <radhermit@gentoo.org> libquicktime-1.1.5.ebuild,
  libquicktime-1.2.2.ebuild:
  Use slot deps for gtk+.

  15 Mar 2011; Ulrich Mueller <ulm@gentoo.org> libquicktime-1.1.5.ebuild,
  libquicktime-1.2.2.ebuild:
  Don't PROVIDE virtual/quicktime, bug 358857.

  05 Mar 2011; Brent Baude <ranger@gentoo.org> libquicktime-1.2.2.ebuild:
  stable ppc, bug 355449

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> libquicktime-1.2.2.ebuild:
  alpha/ia64/sparc stable wrt #355449

  26 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  libquicktime-1.2.2.ebuild:
  x86 stable wrt bug #355449

  21 Feb 2011; Markos Chandras <hwoarang@gentoo.org> libquicktime-1.2.2.ebuild:
  Stable on amd64 wrt bug #355449

  24 Jan 2011; Alexis Ballier <aballier@gentoo.org> -libquicktime-1.2.0.ebuild,
  -libquicktime-1.2.1.ebuild:
  remove old

*libquicktime-1.2.2 (09 Jan 2011)

  09 Jan 2011; Alexis Ballier <aballier@gentoo.org> +libquicktime-1.2.2.ebuild:
  version bump

*libquicktime-1.2.1 (22 Dec 2010)

  22 Dec 2010; Alexis Ballier <aballier@gentoo.org> +libquicktime-1.2.1.ebuild:
  version bump

*libquicktime-1.2.0 (15 Dec 2010)

  15 Dec 2010; Alexis Ballier <aballier@gentoo.org> +libquicktime-1.2.0.ebuild:
  version bump
