@@ -3,13 +3,15 @@ Hash: SHA1
 
 AUX libquicktime-1.2.2-ffmpeg07.patch 1501 RMD160 7e77a3b9e701df3a4afe0f183f3910084ee74cd6 SHA1 403e67b051797fe53957ab7c18fbca2222c331f6 SHA256 1624395f92dfde2091fd662a14cea629791787949e3c9091ba81fce57d375369
 DIST libquicktime-1.2.2.tar.gz 1012400 RMD160 3c9ebdcbfa94f26b4f6c686dc1d2318586edfa4f SHA1 fc2e9754f6cb8a817ce9a7ac91912af56667ee09 SHA256 a83ddaaeaf98231d9f224190dcb8810ebdabd3edb5c8cebe2fb083d25edb7436
+DIST libquicktime-1.2.3.tar.gz 1022465 RMD160 e5f8d7b7fbd99b432bcbc9588df6187909ce2145 SHA1 bda69adad0dfedee41462bd0dd1840e22872c5d6 SHA256 c55760fb4523e45fc2b2e22489c37f08d1b040ce59d3b4f5626c6b2b137c7646
 EBUILD libquicktime-1.2.2.ebuild 2867 RMD160 0dd6e44e5945983ecfe260c7660a247ff1636879 SHA1 bfc47be503458c2289bc6c2e1db6e83eeb346aed SHA256 4ed2b9fa25bf4f72a0be3da3326a79dcb06cd90f4b249b542862b16e182bdd8b
-MISC ChangeLog 25266 RMD160 acfd8a6a3e66cf77d03398feea640dcbd0d80439 SHA1 a943cacf725b6316dce474d46e2487fdb44406f4 SHA256 a4f6ea2b9e8d863c3d0744860be84621016a1de1ae4da31ba0c11538c4741f99
+EBUILD libquicktime-1.2.3.ebuild 2831 RMD160 29dae8cfb7929ab2d46f7df20e54212008706be1 SHA1 6ad7d2fc4fc313220a2d90476e576553118efbcd SHA256 c2d20da750bd1841dadc58abc50c61538708a8928bd16e8af59bad551b47acd4
+MISC ChangeLog 25397 RMD160 3a7cd2456783646f706b4c7e2d86c83835506819 SHA1 b2db74ad445580957726fdac308e73a0ab73d0a5 SHA256 5c068f2820f9dde2622f27e321454cf1721773f75215c71947a28ae651b9741e
 MISC metadata.xml 365 RMD160 3b9ef1a47d2f85224d5cdb61594ea7a99523df8b SHA1 89432e8cbc4ea43cfef9faa722fdd54ba2d4e10f SHA256 2963a8d151be35ab849e2265204e548a11e9176dd3275158905784702910906f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk21394ACgkQvFcC4BYPU0rL0wCgqwGfL1TE9H4Kk0qCkE0v2tXa
-q9sAn1R69cn+0L3xR6qo+Yv+I4GdPZ+r
-=WcB6
+iEYEARECAAYFAk4ThAwACgkQvFcC4BYPU0qvMgCeJKWHtfWbbuPxrKoq3mecmfQB
+p6MAoISVWxVvM7KKtyzuol/qDzSTSHm6
+=8Edm
 -----END PGP SIGNATURE-----
